--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/page.css">
+    <!-- Add Google Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300&subset=latin,greek' rel='stylesheet' type='text/css'>
     <!-- endbuild -->
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyATcWTTUU8nTH3H9rdARvM0bPHhZV44tBw&sensor=false"></script>
 </head>
