Language pack 1차 적용

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,9 @@
     <script src="bower_components/sass-bootstrap/js/tab.js"></script>
     <script src="bower_components/sass-bootstrap/js/tooltip.js"></script>
     <script src="bower_components/sass-bootstrap/js/popover.js"></script>
+    <script src="bower_components/angular-translate/angular-translate.min.js"></script>
+    <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+
     <!-- endbuild -->
 
     <!-- build:js scripts/modules.js -->
