--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,9 @@
 
     <!-- Add your site or application content here -->
     <div id="cloud-container">
-      <div class="container" ng-view=""></div>
+      <div id="background"></div>
+      <div class="container" ng-view="">
+      </div>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
